--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
+        archivesBaseName = "Reminder"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
