--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,16 @@
             </intent-filter>
         </receiver>
 
+        <!-- Midnight Widget Update Receiver -->
+        <receiver android:name=".receiver.MidnightWidgetUpdateReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.example.reminder.MIDNIGHT_WIDGET_UPDATE"/>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+                <action android:name="android.intent.action.TIME_SET"/>
+            </intent-filter>
+        </receiver>
+
         <!-- Widget Provider -->
         <receiver
             android:name=".widget.StickyNoteWidgetProvider"
